--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Controller.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -38,10 +38,10 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".Controller.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".TransitOptions"
+            android:name=".Controller.TransitOptionsActivity"
             android:label="@string/title_activity_transit_options"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
