--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDeY73Ji9XClw8JnWQSUR2mhmXgqN9xwOg@string/google_maps_key" />
+            android:value="AIzaSyDeY73Ji9XClw8JnWQSUR2mhmXgqN9xwOg" />
 
         <activity
             android:name=".Controller.MapsActivity"
@@ -47,7 +47,7 @@
         <activity
             android:name=".GetLocation"
             android:label="@string/title_activity_get_location"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
