--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:label="@string/title_activity_transit_options"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".GetLocation"
+            android:name=".Model.GetLocation"
             android:label="@string/title_activity_get_location"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
