--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,11 @@
             android:name=".Controller.TransitOptionsActivity"
             android:label="@string/title_activity_transit_options"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Controller.DatabaseTest"
+            android:label="Database Activity"
+            android:parentActivityName=".Controller.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
