--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,19 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    sourceSets {
+        main {
+            java {
+                exclude '**/DatabaseTest.java'
+            }
+        }
+        androidTest {
+            java{
+                exclude '**/DatabaseTest.java'
+            }
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
